--- a/aula01/index.html
+++ b/aula01/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1>AULA DE GAME DEV 01 !!</h1>
+    <canvas></canvas>
     <p>Por Joao Pereira</p>
+    <script>
+      let canvas = document.querySelector("canvas");
+      canvas.width = 480;
+      canvas.height = 320;
+    </script>
   </body>
 </html>
