Pinta a cor do fundo

--- a/aula01/index.html
+++ b/aula01/index.html
@@ -12,8 +12,12 @@
     <p>Por Joao Pereira</p>
     <script>
       let canvas = document.querySelector("canvas");
+      let ctx = canvas.getContext("2d");
       canvas.width = 480;
       canvas.height = 320;
+     
+        ctx.fillStyle = "darkgrey";
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
     </script>
   </body>
 </html>
